# multilevelSVM

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-pipeline.yml
app/: kasvm-predict.cpp  kasvm-train.cpp  parse_parameters.h  prepare.cpp  single_level_svm.cpp
cmake/: clang-tidy.cmake  collect-sources.cmake  cppcheck.cmake
lib/: definitions.h
lib/algorithms/: cycle_search.cpp  jarnik_prim.cpp  jarnik_prim.h
lib/data_structure/: graph_access.h  graph_hierarchy.cpp  graph_hierarchy.h
lib/io/: graph_io.cpp  graph_io.h  svm_io.cpp  svm_io.h
lib/partition/: partition_config.cpp  partition_config.h
lib/partition/coarsening/: coarsening.cpp  coarsening.h  coarsening_configurator.h  contraction.cpp  contraction.h
lib/partition/coarsening/clustering/: low_diameter_clustering.cpp  low_diameter_clustering.h  node_ordering.h  simple_clustering.cpp  simple_clustering.h  size_constraint_label_propagation.cpp  size_constraint_label_propagation.h
lib/partition/coarsening/edge_rating/: edge_ratings.cpp  edge_ratings.h
lib/partition/coarsening/matching/: matching.h  random_matching.cpp  random_matching.h
lib/partition/coarsening/matching/gpa/: compare_rating.h  gpa_matching.cpp  gpa_matching.h  path.cpp  path.h  path_set.cpp  path_set.h
lib/partition/coarsening/stop_rules/: stop_rules.h
lib/partition/uncoarsening/refinement/kway_graph_refinement/: kway_graph_refinement.cpp  kway_graph_refinement_core.h
lib/partition/uncoarsening/refinement/quotient_graph_refinement/: boundary_lookup.h  complete_boundary.cpp  complete_boundary.h  partial_boundary.h
lib/svm/: bayes_refinement.cpp  bayes_refinement.h  fix_refinement.cpp  fix_refinement.h  k_fold.cpp  k_fold.h  k_fold_build.cpp  k_fold_build.h  k_fold_import.cpp  k_fold_import.h  k_fold_once.cpp  k_fold_once.h  param_search.cpp  param_search.h  results.cpp  results.h  svm_convert.cpp  svm_convert.h  svm_definitions.h  svm_flann.cpp  svm_flann.h  svm_instance.cpp  svm_instance.h  svm_refinement.cpp  svm_refinement.h  svm_result.cpp  svm_result.h  svm_solver.cpp  svm_solver.h  svm_solver_factory.h  svm_solver_libsvm.cpp  svm_solver_libsvm.h  svm_solver_thunder.cpp  svm_solver_thunder.h  svm_summary.cpp  svm_summary.h  ud_refinement.cpp  ud_refinement.h
lib/tools/: macros_assertions.h  macros_common.h  quality_metrics.cpp  quality_metrics.h  random_functions.cpp  random_functions.h  timer.h
